--- a/index.html
+++ b/index.html
@@ -143,15 +143,18 @@
                 <h1 class="size-50">Know <br /> About me</h1>
                 <div class="h-50"></div>
                 <b>Hey there!</b>
-                <p>I am a UI/UX designer who possesses a keen interest in understanding human psychology and has a background in Electronics and Telecommunications Engineering from the University of Mumbai.</p>
+                <p>An adept in roles spanning marketing and UX design, I command a comprehensive skill set that bridges both domains seamlessly. 
+                    My proficiency extends particularly to digital marketing, 
+                    where I excel in devising and executing strategic campaigns with impactful outcomes.
+                    </p>
                 <!-- <p>I also hold a Bachelor’s degree in IT Engineering from the University of Mumbai.</p> -->
-                <p>My fear of losing my creative side compelled me to pursue this path, alongside my four years of college, where everyone aspired to become software developers, regardless of their major.</p>
+                <p>This prowess finds its roots in my keen interest in comprehending and assisting users, a common thread that unites both marketing and UX design. My hands-on experience with Figma further underscores my holistic approach to UX design, enabling me to translate conceptual visions into refined, user-centric experiences.</p>
                 <br>
-                <b>Why I love practicing & ideating design,every day!!</b>
+<!--                 <b>Why I love practicing & ideating design,every day!!</b>
                 <p>For me, design is a marriage of creativity and technique, these two cannot be separated. Design leads
                     to development and development informs design.</p>
                 <p>I have always been inclined to look for flaws around me and find solutions for them, challenge is
-                    what drives me to relentlessly strive for excellence.</p>
+                    what drives me to relentlessly strive for excellence.</p> -->
                 <!-- <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" /> -->
                 <div class="h-50"></div>
             </div>
@@ -544,7 +547,7 @@
                                 class="fa fa-behance fa"></i></a></li>
                     <li><a href="https://www.instagram.com/_pragati_b_/" target="_blank"><i
                                 class="ion-social-instagram"></i></a></li>
-                    <li><a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=vbdoifode007@gmail.com"
+                    <li><a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=pragatibansod0606@gmail.com"
                             target="_blank">&#x2709;</i></a></li>
 
                 </ul>
