--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <h4>Pragati Bansod</h4>
                     <!-- <h6><i>Persuing</i></h6> -->
                     <!-- <p>&#8203;</p> -->
-                    <h1>Ui/Ux<br />Designer</h1>
+                    <h1>UX/UI Designer and <br />Marketing Strategist</h1>
                     <h5><b><i class="material-icons">&#xe55f;</i>MUMBAI</b></h5>
                     <h5><b>HTML | CSS | Python |<br /> Figma | XD | Photoshop | Wordpress |</b></h5>
 
