--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <h4>Pragati Bansod</h4>
                     <!-- <h6><i>Persuing</i></h6> -->
                     <!-- <p>&#8203;</p> -->
-                    <h1>UX/UI Designer and <br />Marketing Strategist</h1>
+                    <h2>UX/UI Designer &<br />Marketing Strategist</h2>
                     <h5><b><i class="material-icons">&#xe55f;</i>MUMBAI</b></h5>
                     <h5><b>HTML | CSS | Python |<br /> Figma | XD | Photoshop | Wordpress |</b></h5>
 
@@ -561,21 +561,21 @@
                     target="hidden_iframe" onsubmit="submitted=true;"
                     action="https://docs.google.com/forms/d/e/1FAIpQLSdvYej3egY_q-bCzeuhb5eAobI6szncaIVAo6QrcNWLgjRvVg/viewform?usp=sf_link">
 
-                    <label for="entry.1415382967"></label>
-                    <input class="form-control" placeholder="Your Name" type="text" name="entry.1415382967"
-                        id="entry.1415382967" required>
+                    <label for="entry.360795199"></label>
+                    <input class="form-control" placeholder="Your Name" type="text" name="entry.360795199"
+                        id="entry.360795199" required>
 
-                    <label for="entry.597799403"></label>
-                    <input class="form-control" placeholder="Your E-mail" type="text" name="entry.597799403"
-                        id="entry.597799403" required>
+                    <label for="entry.1588288650"></label>
+                    <input class="form-control" placeholder="Your E-mail" type="text" name="entry.1588288650"
+                        id="entry.1588288650" required>
 
-                    <label for="entry.1941330504"></label>
-                    <input class="form-control" placeholder="Contact no." type="text" name="entry.1941330504"
-                        id="entry.1941330504" required>
+                    <label for="entry.202745230"></label>
+                    <input class="form-control" placeholder="Contact no." type="text" name="entry.202745230"
+                        id="entry.202745230" required>
 
-                    <label for="entry.1251066146"></label>
-                    <textarea class="form-control" placeholder="Your Message" id="entry.1251066146"
-                        name="entry.1251066146" style="height:120px" required></textarea><br>
+                    <label for="entry.856737840"></label>
+                    <textarea class="form-control" placeholder="Your Message" id="entry.856737840"
+                        name="entry.856737840" style="height:120px" required></textarea><br>
 
 
                     <button id="submit" type="submit" value="submit" name="submit" class="btn btn-glance">Send</button>
