--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -102,7 +102,7 @@
                     <h4>Pragati Bansod</h4>
                     <!-- <h6><i>Persuing</i></h6> -->
                     <!-- <p>&#8203;</p> -->
-                    <h1>UX/UI Designer &<br />Marketing Strategist</h1>
+                    <p class = "headingcss">UX/UI Designer &<br />Marketing Strategist</p>
                     <h5><b><i class="material-icons">&#xe55f;</i>MUMBAI</b></h5>
                     <h5><b>HTML | CSS | Python |<br /> Figma | XD | Photoshop | Wordpress |</b></h5>
 
