--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
             <div class="col-md-8">
                 <form method="post" novalidate="novalidate" class="contact-bg" id="mG61Hd" name="mG61Hd"
                     target="hidden_iframe" onsubmit="submitted=true;"
-                    action="https://forms.gle/ZRUW9ZSvY2yTvDpv7">
+                    action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdvYej3egY_q-bCzeuhb5eAobI6szncaIVAo6QrcNWLgjRvVg/formResponse">
 
                     <label for="entry.360795199"></label>
                     <input class="form-control" placeholder="Your Name" type="text" name="entry.360795199"
