--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 
 
             <div class="col-md-8">
-                <form method="post" novalidate="novalidate" class="contact-bg" id="mG61Hd" name="mG61Hd"
+                <form method="post" novalidate="novalidate" class="contact-bg" id="gform" name="gform"
                     target="hidden_iframe" onsubmit="submitted=true;"
                     action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdvYej3egY_q-bCzeuhb5eAobI6szncaIVAo6QrcNWLgjRvVg/formResponse">
 
